--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,13 @@
 .App {
+  @media screen and (min-width: 768px) {
+    .container {
+      width: 700px;
+      margin: 0 auto;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    .container {
+      width: 960px;
+    }
+  }
 }
