--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -2,7 +2,7 @@
   margin: 0 auto;
   position: relative;
   color: transparent;
-  background-image: url(background2.png);
+  background-image: url(../../assets/background2.png);
   background-size: cover;
   height: calc(100vh - 50px);
 }
@@ -40,7 +40,7 @@
   font-size: 18px;
   font-weight: 700;
   background-color: transparent;
-  color: var(--white);
+  color: #ffffff;
   display: flex;
   align-content: space-around;
   justify-content: space-around;
@@ -49,17 +49,8 @@
   text-decoration: none;
 }
 @media screen and (min-width: 768px) {
-  .container {
-    width: 700px;
-    margin: 0 auto;
-  }
   .btnOfert:hover {
     background-color: #ffffff;
     color: #4e4e4e;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .container {
-    width: 960px;
   }
 }
