--- a/src/components/specialists/Specialists.css
+++ b/src/components/specialists/Specialists.css
@@ -27,7 +27,7 @@
   width: 221px;
   height: 221px;
   border-radius: 50%;
-  background-image: url(osoba1.jpg);
+  background-image: url(../../assets/osoba1.jpg);
   background-size: cover;
 }
 
@@ -72,7 +72,7 @@
   width: 221px;
   height: 221px;
   border-radius: 50%;
-  background-image: url(osoba2.png);
+  background-image: url(../../assets/osoba2.png);
   background-size: cover;
 }
 
@@ -92,14 +92,10 @@
   text-align: justify;
 }
 @media screen and (min-width: 768px) {
-  .container {
-    width: 700px;
-    margin: 0 auto;
-  }
   .specialists {
     gap: 40px;
-    margin-top: 51px;
-    margin-bottom: 51px;
+    padding-top: 51px;
+    padding-bottom: 51px;
   }
 
   .heading {
@@ -126,7 +122,7 @@
   }
 
   .specialist:nth-of-type(odd) .description {
-    text-align: left;
+    text-align: right;
   }
 
   .specialist:nth-last-of-type(even) {
@@ -152,20 +148,12 @@
     font-weight: 400;
     line-height: 21px;
     letter-spacing: 0em;
-    text-align: right;
+    text-align: left;
   }
 }
 @media screen and (min-width: 1200px) {
-  .container {
-    width: 960px;
-  }
-
   .specialist:nth-last-of-type(odd) {
     gap: 60px;
-  }
-
-  .description:nth-last-of-type(odd) {
-    text-align: left;
   }
 
   .fotoOne {
